--- a/src/app/modules/show-case/components/ui-item/ui-item.component.html
+++ b/src/app/modules/show-case/components/ui-item/ui-item.component.html
@@ -10,7 +10,7 @@
             <div class="ui-small-section">
                 <div class="ui-small-section">
                     <img class="ui-author" src="https://avatars.githubusercontent.com/u/15802366?v=4" alt="">
-                    <span>Leifer</span>
+                    <span>Amador</span>
                 </div>
                 <span><i class="uil uil-star"></i></span>
             </div>
